# CupyChol

./: README.md  setup.cfg  setup.py
Example/: nd6k.py
cupychol/: __init__.py  cupy_chol.cpp  wrapper.py
