[metadata]
name = CupyChol
version = 0.1.0
author = Amin Heyrani Nobari
author_email = ahnobari@mit.edu
description = Solve linear systems using Cholesky decomposition with CuPy arrays
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahnobari/CupyChol
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pybind11>=2.5.0
    cupy>=8.0.0
    numpy>=1.18.0,
    scipy>=1.4.0


[options.extras_require]
dev =
    check-manifest
    flake8
    pytest
